data/derived/sp14/progs/unify/prog0227.ml.out
Characters 174-175:
  | h::t -> h;;
            ^
Error: This expression has type int but an expression was expected of type
         int list
